# fb-2-frontend

./: .gitignore  FDROID_UPDATE.md  LICENSE  README.md  app-release-aligned.apk.idsig  benchmark_logs.txt  build_nav_refine.txt  build_nav_refine_2.txt  com.ivarna.finalbenchmark2.yml  convert_to_webp.py  cpu.config  cpu_benchmark_info.md  donot_delete  fdroid-metadata-template.yml  gradle.properties  my-release-key.keystore  settings.gradle.kts
.kilocode/rules/: design_principles_and_programming_patterns.md
.kilocode/workflows/: build-fast.md  fix.md  implement-feature.md
app/: build.gradle.kts  fix-baseline-profiles.gradle
app/release/: output-metadata.json
app/src/main/cpp/: CMakeLists.txt  cpu_info.cpp  vulkan_info.cpp
benchmark/cpu_benchmark/: Cargo.toml  README.md  build.rs
benchmark/cpu_benchmark/examples/: AndroidCpuBenchmark.kt  KotlinExample.kt  python_example.py
benchmark/cpu_benchmark/src/: algorithms.rs  ffi.rs  jni_interface.rs  lib.rs  main.rs  types.rs  utils.rs
benchmark/cpu_benchmark/tests/: ffi_test.rs  integration_test.rs
docs/benchmark/: cpu.md
docs/components/: AnimatedGlassCard.md  AppTopBar.md  BatteryTemperatureGraph.md  COMPONENTS_DOCUMENTATION.md  ContextualPermissionRequest.md  CpuDataPoint.md  CpuTemperatureGraph.md  CpuUtilizationGraph.md  EmptyStateView.md  GlassCard.md  GpuDataPoint.md  GpuFrequencyCard.md  GpuUtilizationGraph.md  INDEX.md  InformationRow.md  MemoryDataPoint.md  MemoryStats.md  MemoryUsageGraph.md  PowerConsumptionGraph.md  PowerDataPoint.md  ProcessTable.md  ResultCpuGraph.md  (+7 more)
gradle/: libs.versions.toml
(+117 files in other folders)
